fix: DAH-3033 update styling to align the header and body

--- a/app/javascript/layouts/HeaderSidebarLayout.scss
+++ b/app/javascript/layouts/HeaderSidebarLayout.scss
@@ -15,6 +15,10 @@
       align-items: center;
     }
 
+    @media (max-width: $screen-lg) {
+      margin-left: 0;
+    }
+
     .page-header__title {
       font-size: var(--bloom-font-size-3xl);
       text-align: start !important;
